# python-flask/swagger_server/models/__init__.py
@@ -9,6 +9,6 @@ from swagger_server.models.error_message import ErrorMessage
 from swagger_server.models.metadata import Metadata
 from swagger_server.models.product import Product
 from swagger_server.models.products import Products
-from swagger_server.models.ref import Ref
+from swagger_server.models.reference import Reference
 from swagger_server.models.route import Route
 from swagger_server.models.routes import Routes
