# python-flask/swagger_server/models/reference.py
@@ -1,0 +1,150 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Reference(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, title: str=None, ref: str=None, type: str=None, description: str=None):  # noqa: E501
+        """Reference - a model defined in Swagger
+
+        :param title: The title of this Reference.  # noqa: E501
+        :type title: str
+        :param ref: The ref of this Reference.  # noqa: E501
+        :type ref: str
+        :param type: The type of this Reference.  # noqa: E501
+        :type type: str
+        :param description: The description of this Reference.  # noqa: E501
+        :type description: str
+        """
+        self.swagger_types = {
+            'title': str,
+            'ref': str,
+            'type': str,
+            'description': str
+        }
+
+        self.attribute_map = {
+            'title': 'title',
+            'ref': 'ref',
+            'type': 'type',
+            'description': 'description'
+        }
+        self._title = title
+        self._ref = ref
+        self._type = type
+        self._description = description
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Reference':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The reference of this Reference.  # noqa: E501
+        :rtype: Reference
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this Reference.
+
+        name to display for the external reference  # noqa: E501
+
+        :return: The title of this Reference.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this Reference.
+
+        name to display for the external reference  # noqa: E501
+
+        :param title: The title of this Reference.
+        :type title: str
+        """
+
+        self._title = title
+
+    @property
+    def ref(self) -> str:
+        """Gets the ref of this Reference.
+
+        external reference, here lidvid urn  # noqa: E501
+
+        :return: The ref of this Reference.
+        :rtype: str
+        """
+        return self._ref
+
+    @ref.setter
+    def ref(self, ref: str):
+        """Sets the ref of this Reference.
+
+        external reference, here lidvid urn  # noqa: E501
+
+        :param ref: The ref of this Reference.
+        :type ref: str
+        """
+        if ref is None:
+            raise ValueError("Invalid value for `ref`, must not be `None`")  # noqa: E501
+
+        self._ref = ref
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this Reference.
+
+        type of the external reference, can be displayed as an icon for example  # noqa: E501
+
+        :return: The type of this Reference.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this Reference.
+
+        type of the external reference, can be displayed as an icon for example  # noqa: E501
+
+        :param type: The type of this Reference.
+        :type type: str
+        """
+
+        self._type = type
+
+    @property
+    def description(self) -> str:
+        """Gets the description of this Reference.
+
+        longer description for the external reference, can be displayed in a tooltip  # noqa: E501
+
+        :return: The description of this Reference.
+        :rtype: str
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description: str):
+        """Sets the description of this Reference.
+
+        longer description for the external reference, can be displayed in a tooltip  # noqa: E501
+
+        :param description: The description of this Reference.
+        :type description: str
+        """
+
+        self._description = description
